# SnookerHelp

./: README.md  pyproject.toml
benchmarks/: README.md
configs/: charuco_calitar_cali100020tar5.yaml  detector_classical.yaml  sony_dev.yaml  table_manual.yaml  table_model.yaml
docs/: README.md  approximate_camera_model.md  architecture.md  ball_geometry_model.md  baseline_validation.md  boundary_filtering_strategy.md  charuco_calibration_workflow.md  coordinate_accuracy_validation.md  execution_plan.md  image_debug_reports.md  manim_geometry_visualizations.md  physical_validation_tools.md  precision_calibration_inputs.md  proposal.md  recognition_strategy_review_package.md  recognition_v2_requirements.md  refactor_plan_v1.md  v1_migration_status.md
snookerhelp/: __init__.py
tests/: test_accuracy.py  test_arc_combo_fit.py  test_circle_fit.py  test_cluster_graph_and_ownership.py  test_cluster_optimize.py  test_cluster_promotion.py  test_color_classifier.py  test_ellipse_accuracy.py  test_ellipse_benchmark.py  test_ellipse_fit.py  test_evidence_experiment.py  test_evidence_maps.py  test_geometry.py  test_ground_truth.py  test_joint_cluster_solver.py  test_model_scoring.py  test_physical_optimize.py  test_physical_validation.py  test_sample_pipeline.py  test_sphere_projection.py  test_v1_annotation_entrypoint.py  test_v1_architecture_gates.py  test_v1_benchmark_entrypoints.py  test_v1_calibration_entrypoints.py  test_v1_core_module_ownership.py  test_v1_export_entrypoint.py  test_v1_generate_report_entrypoints.py  test_v1_geometry_module_ownership.py  (+11 more)
(+118 files in other folders)
